// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`composer (a) single generator > emits a final pass that calls the generator body + tonemap/OETF tail 1`] = `
"fn genBody(speed: f32, uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, speed, 1f);
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  speed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_g1: padded_1,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  var composed_0 = genBody(uniforms.n_g1.speed, uv);
  return vec4f(linearToSrgb(tone_linear(composed_0.rgb)), composed_0.a);
}"
`;

exports[`composer (b) two generators + multiply blend + opacity > folds siblings with the multiply blend fn and per-node opacity 1`] = `
"fn overComposite(base: vec4f, blended: vec3f, overlayAlpha: f32) -> vec4f {
  let baseWeight = (base.w * (1f - overlayAlpha));
  let finalAlpha = (overlayAlpha + baseWeight);
  let rgb = ((blended * overlayAlpha) + (base.xyz * baseWeight));
  return vec4f(rgb, finalAlpha);
}

fn blend_multiply(base: vec4f, overlay2: vec4f, opacity: f32) -> vec4f {
  let overlayAlpha = (overlay2.w * opacity);
  let blended = (base.xyz * overlay2.xyz);
  return overComposite(base, blended, overlayAlpha);
}

fn genBody(speed: f32, uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, speed, 1f);
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  speed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct padded_2 {
  speed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_g1: padded_1,
  n_g2: padded_2,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  var composed_0 = blend_multiply(genBody(uniforms.n_g1.speed, uv), genBody(uniforms.n_g2.speed, uv), uniforms.n_g2._opacity);
  return vec4f(linearToSrgb(tone_linear(composed_0.rgb)), composed_0.a);
}"
`;

exports[`composer (c) generator + RTT filter > creates an RTT boundary for the consumed child and samples it > final-pass 1`] = `
"fn genBody(speed: f32, uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, speed, 1f);
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  speed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct padded_2 {
  amount: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_g1: padded_1,
  n_f1: padded_2,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn filterBody(child: vec4f, amount: f32) -> vec4f {
  return vec4f((child.rgb * amount), child.a);
}

@group(1) @binding(0) var rtt_0: texture_2d<f32>;

@group(2) @binding(0) var linearClamp: sampler;

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  var composed_0 = mix(genBody(uniforms.n_g1.speed, uv), filterBody(textureSample(rtt_0, linearClamp, uv), uniforms.n_f1.amount), uniforms.n_f1._opacity);
  return vec4f(linearToSrgb(tone_linear(composed_0.rgb)), composed_0.a);
}"
`;

exports[`composer (c) generator + RTT filter > creates an RTT boundary for the consumed child and samples it > rtt-pass 1`] = `
"fn overComposite(base: vec4f, blended: vec3f, overlayAlpha: f32) -> vec4f {
  let baseWeight = (base.w * (1f - overlayAlpha));
  let finalAlpha = (overlayAlpha + baseWeight);
  let rgb = ((blended * overlayAlpha) + (base.xyz * baseWeight));
  return vec4f(rgb, finalAlpha);
}

fn blend_normal(base: vec4f, overlay2: vec4f, opacity: f32) -> vec4f {
  let overlayAlpha = (overlay2.w * opacity);
  return overComposite(base, overlay2.xyz, overlayAlpha);
}

fn genBody(speed: f32, uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, speed, 1f);
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  speed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct padded_2 {
  amount: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_g1: padded_1,
  n_f1: padded_2,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

struct rtt_rtt_0_Input {
  @location(0) uv: vec2f,
}

@fragment fn rtt_rtt_0(in: rtt_rtt_0_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  return blend_normal(vec4f(0.0, 0.0, 0.0, 0.0), genBody(uniforms.n_g1.speed, uv), 1.0);
}"
`;

exports[`composer (d) generator + mask reference > composes the mask source and applies the mask fn 1`] = `
"fn overComposite(base: vec4f, blended: vec3f, overlayAlpha: f32) -> vec4f {
  let baseWeight = (base.w * (1f - overlayAlpha));
  let finalAlpha = (overlayAlpha + baseWeight);
  let rgb = ((blended * overlayAlpha) + (base.xyz * baseWeight));
  return vec4f(rgb, finalAlpha);
}

fn blend_normal(base: vec4f, overlay2: vec4f, opacity: f32) -> vec4f {
  let overlayAlpha = (overlay2.w * opacity);
  return overComposite(base, overlay2.xyz, overlayAlpha);
}

fn genBody(speed: f32, uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, speed, 1f);
}

struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  radius: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct padded_2 {
  speed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_m1: padded_1,
  n_g1: padded_2,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

fn mask_luminance(target_1: vec4f, mask: vec4f) -> vec4f {
  let lum = dot(mask.xyz, vec3f(0.2125999927520752, 0.7152000069618225, 0.0722000002861023));
  return vec4f(target_1.xyz, (target_1.w * lum));
}

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  var composed_0 = blend_normal(genBody(uniforms.n_m1.radius, uv), mask_luminance(genBody(uniforms.n_g1.speed, uv), genBody(uniforms.n_m1.radius, uv)), uniforms.n_g1._opacity);
  return vec4f(linearToSrgb(tone_linear(composed_0.rgb)), composed_0.a);
}"
`;

exports[`composer (e) map driver override > emits a local props copy with a sampled + remapped field overwrite 1`] = `
"struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  speed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct padded_2 {
  speed: f32,
  _opacity: f32,
  _map_speed_inputMin: f32,
  _map_speed_inputMax: f32,
  _map_speed_outputMin: f32,
  _map_speed_outputMax: f32,
  _map_speed_curve: f32,
  _pad0: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_src: padded_1,
  n_g1: padded_2,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

@group(1) @binding(0) var rtt_0: texture_2d<f32>;

@group(2) @binding(0) var linearClamp: sampler;

fn overComposite(base: vec4f, blended: vec3f, overlayAlpha: f32) -> vec4f {
  let baseWeight = (base.w * (1f - overlayAlpha));
  let finalAlpha = (overlayAlpha + baseWeight);
  let rgb = ((blended * overlayAlpha) + (base.xyz * baseWeight));
  return vec4f(rgb, finalAlpha);
}

fn blend_normal(base: vec4f, overlay2: vec4f, opacity: f32) -> vec4f {
  let overlayAlpha = (overlay2.w * opacity);
  return overComposite(base, overlay2.xyz, overlayAlpha);
}

fn genBody(speed: f32, uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, speed, 1f);
}

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  var p_n_g1_0 = uniforms.n_g1;
  p_n_g1_0.speed = mix(uniforms.n_g1._map_speed_outputMin, uniforms.n_g1._map_speed_outputMax, pow(clamp((dot(textureSample(rtt_0, linearClamp, uv).rgb, vec3f(0.2126, 0.7152, 0.0722)) - uniforms.n_g1._map_speed_inputMin) / max(uniforms.n_g1._map_speed_inputMax - uniforms.n_g1._map_speed_inputMin, 0.0001), 0.0, 1.0), pow(2.0, -uniforms.n_g1._map_speed_curve * 2.0)));
  var composed_1 = blend_normal(genBody(uniforms.n_src.speed, uv), genBody(p_n_g1_0.speed, uv), uniforms.n_g1._opacity);
  return vec4f(linearToSrgb(tone_linear(composed_1.rgb)), composed_1.a);
}"
`;

exports[`composer (f) hidden mask + map sources still compose (Flowing Dots shape) > composes an invisible map+mask source chain referenced by a visible consumer 1`] = `
"struct padded {
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
  _pad2: f32,
}

struct padded_1 {
  speed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct padded_2 {
  speed: f32,
  _opacity: f32,
  _map_speed_inputMin: f32,
  _map_speed_inputMax: f32,
  _map_speed_outputMin: f32,
  _map_speed_outputMax: f32,
  _map_speed_curve: f32,
  _pad0: f32,
}

struct padded_3 {
  speed: f32,
  _opacity: f32,
  _pad0: f32,
  _pad1: f32,
}

struct struct_1 {
  time: f32,
  viewportSize: vec2f,
  logicalViewportSize: vec2f,
  aspect: f32,
  pointer: vec2f,
  pointerActive: f32,
}

struct combined {
  n_root: padded,
  n_chroma: padded_1,
  n_dots: padded_2,
  n_g1: padded_3,
  _sys: struct_1,
}

@group(0) @binding(0) var<uniform> uniforms: combined;

@group(1) @binding(0) var rtt_0: texture_2d<f32>;

@group(2) @binding(0) var linearClamp: sampler;

fn mask_luminance(target_1: vec4f, mask: vec4f) -> vec4f {
  let lum = dot(mask.xyz, vec3f(0.2125999927520752, 0.7152000069618225, 0.0722000002861023));
  return vec4f(target_1.xyz, (target_1.w * lum));
}

fn genBody(speed: f32, uv: vec2f) -> vec4f {
  return vec4f(uv.x, uv.y, speed, 1f);
}

fn linearToSrgb(color: vec3f) -> vec3f {
  let a = ((pow(color, vec3f(0.41666001081466675)) * 1.055f) - 0.055f);
  let b = (color * 12.92f);
  let factor = (color <= vec3f(0.0031308000907301903));
  return select(a, b, factor);
}

fn tone_linear(color: vec3f) -> vec3f {
  return vec3f(color.x, color.y, color.z);
}

struct final_Input {
  @location(0) uv: vec2f,
}

@fragment fn final_1(in: final_Input) -> @location(0)  vec4f {
  var uv = vec2f(in.uv.x, 1.0 - in.uv.y);
  var p_n_dots_0 = uniforms.n_dots;
  p_n_dots_0.speed = mix(uniforms.n_dots._map_speed_outputMin, uniforms.n_dots._map_speed_outputMax, pow(clamp((dot(textureSample(rtt_0, linearClamp, uv).rgb, vec3f(0.2126, 0.7152, 0.0722)) - uniforms.n_dots._map_speed_inputMin) / max(uniforms.n_dots._map_speed_inputMax - uniforms.n_dots._map_speed_inputMin, 0.0001), 0.0, 1.0), pow(2.0, -uniforms.n_dots._map_speed_curve * 2.0)));
  var composed_1 = mask_luminance(genBody(uniforms.n_g1.speed, uv), genBody(p_n_dots_0.speed, uv));
  return vec4f(linearToSrgb(tone_linear(composed_1.rgb)), composed_1.a);
}"
`;
